Disable animations for Safari

--- a/style.css
+++ b/style.css
@@ -18,10 +18,10 @@ body {
 	}
 
 .container {
-	animation: fadein 1s;
+/*	animation: fadein 1s;
 	-moz-animation: fadein 1s; /* Firefox */
-	-webkit-animation: fadein 1s; /* Safari and Chrome */
-	-o-animation: fadein 1s; /* Opera */
+/*	-webkit-animation: fadein 1s; /* Safari and Chrome */
+/*	-o-animation: fadein 1s; /* Opera */
 }
 
 .header {
