--- a/style.css
+++ b/style.css
@@ -18,10 +18,10 @@ body {
 	}
 
 .container {
-/*	animation: fadein 1s;
+	animation: fadein 1s;
 	-moz-animation: fadein 1s; /* Firefox */
-/*	-webkit-animation: fadein 1s; /* Safari and Chrome */
-/*	-o-animation: fadein 1s; /* Opera */
+	-webkit-animation: fadein 1s; /* Safari and Chrome */
+	-o-animation: fadein 1s; /* Opera */
 }
 
 .header {
@@ -44,7 +44,7 @@ body {
 	width: 100%;
 	height: 100%;
 	font-size: 18px;
-	font-family: "adobe-caslon-pro", serif;
+	font-family: regular, arial;
 
 	display: flex;
 	justify-content: center;
@@ -62,7 +62,7 @@ body {
 	position: fixed;
 	color: rgba(0,0,0,0.3);
 	font-size: 18px;
-	font-family: "adobe-caslon-pro", serif;
+	font-family: regular, arial;
 	height: 24px;
 	bottom: 60px;
 }
@@ -87,6 +87,11 @@ body {
 @font-face {
 	font-family: "medium";
 	src: url("fonts/medium.otf");
+}
+
+@font-face {
+	font-family: "regular";
+	src: url("fonts/regular.otf");
 }
 
 @keyframes fadein {
