--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
 	}
 
 .container {
+	height: 100%;
 	animation: fadein 1s;
 	-moz-animation: fadein 1s; /* Firefox */
 	-webkit-animation: fadein 1s; /* Safari and Chrome */
@@ -40,11 +41,14 @@ body {
 
 
 .content {
-	color: rgba(0,0,0,0.5);
+	color: rgba(0,0,0,0.6);
 	width: 100%;
 	height: 100%;
+	line-height: 1.8em;
 	font-size: 18px;
-	font-family: regular, arial;
+	font-family: "adobe-caslon-pro", "regular", serif;
+	font-smooth: always;
+	-webkit-font-smoothing: antialiased;
 
 	display: flex;
 	justify-content: center;
@@ -62,7 +66,7 @@ body {
 	position: fixed;
 	color: rgba(0,0,0,0.3);
 	font-size: 18px;
-	font-family: regular, arial;
+	font-family: "adobe-caslon-pro", "regular", serif;
 	height: 24px;
 	bottom: 60px;
 }
