--- a/mobile.css
+++ b/mobile.css
@@ -58,7 +58,7 @@
 @media only screen and (max-width: 400px) {
 
 	.container-header {
-		margin: 7% 7%;
+		margin: 8% 7%;
 	}
 
 	.one-column {
@@ -78,7 +78,7 @@
 		opacity: 1 !important;
 	}
 
-	#left {
+	#left, #right {
 		width: 210px;
 	}
 
