--- a/calc/style.css
+++ b/calc/style.css
@@ -5,12 +5,16 @@
 }
 
 body {
-  margin: 120px;
+  margin: 10%;
   background-color: #F7F7F6;
 }
 
 .info {
   opacity: 0.5;
+}
+
+h1 {
+  font-size: 28px;
 }
 
 h3 {
@@ -23,65 +27,114 @@ a {
   border-bottom: 1px dotted black;
 }
 
+a:hover, a:active {
+  border-bottom: 1px solid;
+  /* background-color: #FAFFE0; */
+}
+
+.button {
+  font-size: 16px;
+  font-weight: 400;
+  padding: 10px 18px;
+  border-radius: 4px;
+  border: 1px solid black;
+}
+
+.button:hover {
+  color: #F7F7F6;
+  background-color: black;
+}
+
+input {
+  background-color: #F7F7F6;
+  border: 0;
+  border-bottom: 1px solid black;
+}
+
 .section {
     border-top: 2px solid black;
-    margin: 20px 0;
-    padding: 20px 0;
+    padding: 40px 0;
+    /* border: 1px solid red; */
 }
 
 .section h2 {
     padding: 0 0 20px 0;
 }
 
+#sticky {
+  position: fixed;
+  width: 80%;
+  background-color: #F7F7F6;
+}
+
 /* Accordion * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
+.accordioncontainer {
+  padding: 10px 0;
+  /* border: 1px solid orange; */
+}
+
 .accordion {
-  background-color: #eee;
-  color: #444;
   cursor: pointer;
-  padding: 18px;
+  border: 0px;
   width: 100%;
-  border: none;
   text-align: left;
-  outline: none;
-  font-size: 15px;
-  transition: 0.4s;
+  padding: 0 0 25px 0;
+  background-color: #F7F7F6;
+  /* border: 1px solid purple; */
 }
 
 .active, .accordion:hover {
-  background-color: #ccc;
+  background-color: #F7F7F6;
+  /* border: 1px solid green; */
 }
 
 .accordion:after {
   content: '\002B';
-  color: #777;
-  font-weight: bold;
+  margin: -26px 0 0 0;
   float: right;
-  margin-left: 5px;
+  /* border: 1px solid blue; */
 }
 
 .active:after {
   content: "\2212";
+  /* border: 1px solid red; */
 }
 
 .panel {
-  padding: 0 18px;
-  background-color: white;
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
+  border-bottom: 1px solid black;
+  margin: 0 0 15px 0;
+  margin: 0;
+  /* border: 1px solid red; */
+}
+
+.panelLastChild {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+  border-bottom: 0px;
+  margin: 0 0 15px 0;
+  margin: 0;
+  /* border: 1px solid red; */
+}
+
+.panel p, .panel li, .panelLastChild li {
+  /* color:blue; */
+  padding: 0 0 20px 0;
+  line-height: 1em;
 }
 
 /* Modal * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
-body {font-family: Arial, Helvetica, sans-serif;}
-
-/* The Modal (background) */
+/* Background */
 .modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  padding-top: 0; /* Location of the box */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
@@ -94,18 +147,23 @@ body {font-family: Arial, Helvetica, sans-serif;}
 /* Modal Content */
 .modal-content {
   background-color: #fefefe;
+  position: fixed;
+  top: 40%;
+  right: 20%;
+  bottom: 40%;
+  left: 20%;
   margin: auto;
-  padding: 20px;
+  padding: 20px 40px;
   border: 1px solid #888;
-  width: 80%;
+  border-radius: 20px;
 }
 
 /* The Close Button */
 .close {
-  color: #aaaaaa;
+  color: black;
   float: right;
   font-size: 28px;
-  font-weight: bold;
+  font-weight: 300;
 }
 
 .close:hover,
@@ -113,4 +171,15 @@ body {font-family: Arial, Helvetica, sans-serif;}
   color: #000;
   text-decoration: none;
   cursor: pointer;
+}
+
+/* Mediaqueries * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
+
+@media (width <= 700px) {
+
+  body {
+    margin: 25px;
+    background-color: #F7F7F6;
+  }
+
 }
