--- a/calc/style.css
+++ b/calc/style.css
@@ -29,6 +29,7 @@ a {
 
 a:hover, a:active {
   border-bottom: 1px solid;
+  background-color: #F7F7F6;
   /* background-color: #FAFFE0; */
 }
 
@@ -38,6 +39,7 @@ a:hover, a:active {
   padding: 10px 18px;
   border-radius: 4px;
   border: 1px solid black;
+  background-color: #F7F7F6;
 }
 
 .button:hover {
@@ -49,6 +51,7 @@ input {
   background-color: #F7F7F6;
   border: 0;
   border-bottom: 1px solid black;
+  border-radius: 0px;
 }
 
 .section {
